scope/scope-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: scope-ingress
  namespace: weave
spec:
  rules:
    - host: scope.zxc.test.com
      http:
        paths:
        - path: /
          backend:
            serviceName: weave-scope-app
            servicePort: 80
